# ai-agent-trading

./: CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
docs/: CAPABILITIES.md  GUIDE.md  maintenance-log.md
docs/plans/: 2026-06-27-position-lifecycle-helpers.md  2026-06-27-yaml-loader-m13.md  README.md
docs/superpowers/specs/: 2026-06-27-graduation-snipe-strategy-design.md
examples/: bench_scanner_latency.py  run_kol_copytrade.py  run_kol_tier_router.py  run_kol_with_router.py  run_lifecycle.py  run_with_knowledge.py  run_with_router.py  run_yaml_scanner.py  scanner.yaml  walkthrough.py
graphify-out/: .graphify_labels.json  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
graphify-out/2026-06-27/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
scripts/: commit-as.sh
strategies/: __init__.py
strategies/agents/: kol_copytrade.py  lifecycle.py  scanner.py  sniper.py
strategies/nodes/: analyst.py  kol_nodes.py  lifecycle_nodes.py  sniper_nodes.py
tests/: test_config_cli.py  test_config_dsl.py  test_config_loader.py  test_kol_reflective_loop.py  test_lifecycle_agent.py  test_lifecycle_nodes.py  test_lifecycle_reflective.py  test_provider_expansion.py  test_scanner_router.py  test_sniper_reflective_loop.py  test_strategies_knowledge_pack.py
trading/: __init__.py  schemas.py
zetryn/: __init__.py
zetryn/config/: __init__.py  __main__.py  dsl.py  loader.py
zetryn/llm/: __init__.py  config.py  router.py
